# pointer-analysis-expr

./: .gitignore  Cargo.toml
minimal_test/: Cargo.toml
src/: lib.rs
svf-tools/: CMakeLists.txt
svf-tools/lto-plugin/: CMakeLists.txt  SvfLtoPlugin.cpp
svf-tools/scripts/: analyze_results.py
svf-tools/svf-checker/: CMakeLists.txt  svf-checker.cpp
svf_runtime/: Cargo.toml  svf_pts_to.json  svf_pts_to_4uv9bemlium6zddnql1pzxn1j_0.json  svf_pts_to_svf_runtime.4c13d981843c8c2d-cgu.0_0.json  svf_pts_to_svf_runtime.9b70b18189514b16-cgu.0_0.json
svf_runtime/src/: alias.rs  heap.rs  lib.rs  unsafe_heap_access.rs
test_app/: Cargo.toml
test_app/.cargo/: config.toml
test_app/src/: main.rs
tests/minimal_test/.cargo/: config.toml
tests/minimal_test/src/: main.rs
tests/test_app/: Cargo.toml  build_output.txt
tests/test_app/.cargo/: config.toml
